fix line spacing in mobile devices

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2897,7 +2897,7 @@ body:after {
     font-weight: 700;
     color: #FFF;
     text-decoration: none;
-    line-height: 1rem;
+    line-height: 3rem;
 }
 
 #header>.logo span {
